# pkg/openapi/router.go
@@ -62,6 +62,9 @@ type ServerInterface interface {
 	// Stop instance
 	// (POST /api/v2/instances/{instanceID}/stop)
 	PostApiV2InstancesInstanceIDStop(w http.ResponseWriter, r *http.Request, instanceID InstanceIDParameter)
+	// Get the deployed service version
+	// (GET /api/v2/version)
+	GetApiV2Version(w http.ResponseWriter, r *http.Request)
 }
 
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
@@ -160,6 +163,12 @@ func (_ Unimplemented) PostApiV2InstancesInstanceIDStart(w http.ResponseWriter, 
 // Stop instance
 // (POST /api/v2/instances/{instanceID}/stop)
 func (_ Unimplemented) PostApiV2InstancesInstanceIDStop(w http.ResponseWriter, r *http.Request, instanceID InstanceIDParameter) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// Get the deployed service version
+// (GET /api/v2/version)
+func (_ Unimplemented) GetApiV2Version(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -714,6 +723,26 @@ func (siw *ServerInterfaceWrapper) PostApiV2InstancesInstanceIDStop(w http.Respo
 	handler.ServeHTTP(w, r)
 }
 
+// GetApiV2Version operation middleware
+func (siw *ServerInterfaceWrapper) GetApiV2Version(w http.ResponseWriter, r *http.Request) {
+
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, Oauth2AuthenticationScopes, []string{})
+
+	r = r.WithContext(ctx)
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetApiV2Version(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
 type UnescapedCookieParamError struct {
 	ParamName string
 	Err       error
@@ -874,6 +903,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/api/v2/instances/{instanceID}/stop", wrapper.PostApiV2InstancesInstanceIDStop)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/api/v2/version", wrapper.GetApiV2Version)
 	})
 
 	return r
